fixed flexboxs last row spacing

--- a/public/sass/category.scss
+++ b/public/sass/category.scss
@@ -19,7 +19,7 @@
 			display: flex;
 			-webkit-flex-flow: row wrap;
 			flex-flow: row wrap;
-			justify-content: space-between;
+			justify-content: flex-start;
 			.product{
 				-webkit-box-shadow: 1px 0 10px 2px #ccc;
 				-moz-box-shadow: 1px 0 10px 2px #ccc;
@@ -141,12 +141,27 @@
 	}
 }
 
+@media(min-width: $screen-md-min){
+	.category-container{
+		#catPartsContainer{
+			.product-view{
+				.product{
+					width: 45%;
+					margin: 10px;
+				}
+			}
+		}
+	}
+
+}
+
 @media(min-width: $screen-lg-min){
 	.category-container{
 		#catPartsContainer{
 			.product-view{
 				.product{
-					width:350px;
+					width: 350px;
+					margin: 10px;
 					.product-price, .product-attr{
 						float:none;
 					}
